# SecServer

./: CMakeLists.txt  README.md  config.ini.template
page/: chat.html  index.html
src/: iniparser.cpp  iniparser.h  main.cpp
src/webserver/: webserver.cpp  webserver.h
static/: basic.css  style.css  zenburn.css
